@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (C) 2015 Red Hat, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,13 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package io.fabric8.kubernetes.client.vertx;
 
 import io.fabric8.kubernetes.client.http.AsyncBody;
-import io.fabric8.kubernetes.client.http.HttpRequest;
 import io.fabric8.kubernetes.client.http.HttpResponse;
-import io.fabric8.kubernetes.client.http.StandardHttpHeaders;
 import io.fabric8.kubernetes.client.http.StandardHttpRequest;
 import io.fabric8.kubernetes.client.http.StandardHttpRequest.BodyContent;
 import io.vertx.core.Future;
@@ -28,57 +25,24 @@ import io.vertx.core.Vertx;
 import io.vertx.core.buffer.Buffer;
 import io.vertx.core.http.HttpClient;
 import io.vertx.core.http.HttpClientResponse;
+import io.vertx.core.http.HttpClosedException;
 import io.vertx.core.http.RequestOptions;
 import io.vertx.core.streams.ReadStream;
 
+import java.io.IOException;
 import java.io.InputStream;
 import java.nio.ByteBuffer;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
 
 class VertxHttpRequest {
 
-  private static final class VertxHttpResponse extends StandardHttpHeaders implements HttpResponse<AsyncBody> {
-    private final AsyncBody result;
-    private final HttpClientResponse resp;
-    private final HttpRequest request;
-
-    private VertxHttpResponse(AsyncBody result, HttpClientResponse resp, HttpRequest request) {
-      super(toHeadersMap(resp.headers()));
-      this.result = result;
-      this.resp = resp;
-      this.request = request;
-    }
-
-    @Override
-    public int code() {
-      return resp.statusCode();
-    }
-
-    @Override
-    public AsyncBody body() {
-      return result;
-    }
-
-    @Override
-    public HttpRequest request() {
-      return request;
-    }
-
-    @Override
-    public Optional<HttpResponse<?>> previousResponse() {
-      return Optional.empty();
-    }
-  }
-
   final Vertx vertx;
   private final RequestOptions options;
-  private StandardHttpRequest request;
+  private final StandardHttpRequest request;
 
   public VertxHttpRequest(Vertx vertx, RequestOptions options, StandardHttpRequest request) {
     this.vertx = vertx;
@@ -105,8 +69,12 @@ class VertxHttpRequest {
 
         @Override
         public void cancel() {
+          // The exception handler must be cleared before calling reset(), otherwise
+          // the reset triggers a StreamResetException that completes the future
+          // exceptionally before done.cancel() can run.
           resp.handler(null);
           resp.endHandler(null);
+          resp.exceptionHandler(null);
           resp.request().reset();
           done.cancel(false);
         }
@@ -114,12 +82,13 @@ class VertxHttpRequest {
       };
       resp.handler(buffer -> {
         try {
-          consumer.consume(Arrays.asList(ByteBuffer.wrap(buffer.getBytes())), result);
+          consumer.consume(List.of(ByteBuffer.wrap(buffer.getBytes())), result);
         } catch (Exception e) {
           resp.request().reset();
           result.done().completeExceptionally(e);
         }
-      }).endHandler(end -> result.done().complete(null));
+      }).endHandler(end -> result.done().complete(null))
+          .exceptionHandler(ex -> result.done().completeExceptionally(ex));
       return new VertxHttpResponse(result, resp, request);
     };
     return client.request(options).compose(request -> {
@@ -145,7 +114,10 @@ class VertxHttpRequest {
         fut = request.send();
       }
       return fut.map(responseHandler);
-    }).toCompletionStage().toCompletableFuture();
+    }).recover(t -> t instanceof HttpClosedException
+        ? Future.failedFuture(new IOException(t.getMessage(), t))
+        : Future.failedFuture(t))
+        .toCompletionStage().toCompletableFuture();
   }
 
   static Map<String, List<String>> toHeadersMap(MultiMap multiMap) {
